2017-08-14 Added keyboard navigation for ordering module.
2017-08-14 Removed unnecessary text from SVG2 addon.
2017-08-10 Added keyboard navigation (WCAG) for connection addon.
2017-08-09 Added gotoCommonPageId, setHeaderVisibility, setFooterVisibility commands for player.
2017-08-09 Fixed problem with double mathjax rendering in ordering module.
2017-08-08 Added keyboard navigation (WCAG) to Source List module and draggable gaps in Text module
2017-08-08 Added WCAG for GotoPageButton.
2017-08-04 Added EOG event for Hangman addon
2017-08-04 Added keyboard navigation and timer feature to Memo Game module
2017-08-04 Fixed problem with different display of math gaps in editor and player.
2017-07-31 Fixed problem with eKeyboard open command.
2017-07-28 Added option for sorting assets in select file window.
2017-07-26 Fixed problem with empty stroke width property in fractions addon.
2017-07-25 Added Increment mistake counter property for Show Answers.
2017-07-25 Fixed popup size when page bigger than window size.
2017-07-25 Changed default video control bar to custom control bar. Fixed problems with subtitles in fullscreen in video.
2017-07-24 Added new mode do fractions addon to dividing square. Refactored fractions addon.
2017-07-18 Fixed popup close event.
2017-07-17 Added video current time event.
2017-07-11 Added command execute for reset button module.
2017-07-10 Fixed selecting text while dragging slider. Fixed dragged slider position.
2017-07-07 Added Wrap Items property to multiplegap module
2017-07-05 Fixed problem with tests which are using gwt classes
2017-06-29 Fixed problem with using apostrophe in gaps
2017-06-19 Fixed problem with custom events in Source list
2017-06-08 Fixed problem with dropdown gaps in Text module
2017-06-06 Fixed issue with scoring in Text module, added escaping pattern in gaps.
2017-06-05 Fixed problem with using eKeyboard in Text module. Added build files to gitignore.