@@ -1,3 +1,4 @@
+2017-08-14 Added keyboard navigation for Single State Button and Double State Button. Fixed keyboard navigation for addon buttons.
 2017-08-14 Added keyboard navigation for ordering module.
 2017-08-14 Removed unnecessary text from SVG2 addon.
 2017-08-10 Added keyboard navigation (WCAG) for connection addon.
